--- a/style.css
+++ b/style.css
@@ -4,3 +4,176 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
+a, .hero-para {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.flex {
+    display: flex;
+}
+
+.header-and-hero {
+    background: #1f2937;
+    color: #f9faf8;
+    padding: 0px 120px 90px 120px;
+}
+
+.header {
+    height: 60px;
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+.header-logo {
+    font-size: 24px;
+    margin-right: auto;
+    font-weight: 700;
+}
+
+.header-links {
+    gap: 15px;
+}
+
+.hero {
+    gap: 40px;
+}
+
+.hero-heading {
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.left-part {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+}
+
+.right-part > img {
+    width: 500px;
+    height: 280px;
+}
+
+.hero-button {
+    width: 120px;
+    height: 30px;
+    background: #3882f6;
+    font-weight: 700;
+    border: none;
+    border-radius: 5px;
+    color: #f9faf8;
+}
+
+.img-section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 430px;
+    gap: 43px;
+}
+
+.img-section-heading {
+    font-size: 36px;
+    font-weight: 700;
+    color: #1f2937;
+}
+
+.images {
+    width: 900;
+    gap: 25px;
+}
+
+.image {
+    text-align: center;
+    width: 200px;
+    font-weight: 300;
+    color: #1f2937;
+    margin-bottom: 20px;
+
+}
+
+.img-section img {
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+    width: 200px;
+    height: 200px;
+}
+
+.quote-section {
+    justify-content: center;
+    align-items: center;
+    background-color: #e5e7eb;
+    height: 400px;
+}
+
+.quote-cont {
+    margin-top: 20px;;
+    width: 800px;
+    flex-direction: column;
+    gap: 20px;
+}
+
+blockquote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    font-weight: lighter;
+    color: #1f2937
+}
+
+cite {
+    align-self: flex-end;
+    font-weight: 700;
+    font-style: normal;
+    margin-right: 10px;
+}
+
+.call-section {
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+.call-container {
+    justify-content: space-between;
+    align-items: center;
+    width: 900px;
+    height: 150px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    padding: 20px 80px;
+    color: #f9faf8;
+}
+
+.call-big-text {
+    font-weight: 700;
+    font-size: 24px;
+}
+
+.call-small-text {
+    font-weight: 100;
+}
+
+.call-button {
+    border: 2px solid #f9faf8;
+    background: inherit;
+    color: #f9faf8;
+    border-radius: 10px;
+    padding: 8px 30px;
+    font-weight: 700;
+}
+
+.footer {
+    height: 80px;
+    background-color: #1f2937;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-text {
+    color: #f9faf8;
+}
