Apply a max-width property for the hero text

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ a, .hero-para {
     align-items: flex-start;
     justify-content: center;
     gap: 20px;
+    max-width: 600px;
 }
 
 .right-part > img {
@@ -84,23 +85,24 @@ a, .hero-para {
 
 .images {
     width: 900;
-    gap: 25px;
+    gap: 40px;
 }
 
 .image {
     text-align: center;
-    width: 200px;
+    width: 180px;
     font-weight: 300;
     color: #1f2937;
     margin-bottom: 20px;
-
 }
+
 
 .img-section img {
     border: 5px solid #3882f6;
     border-radius: 10px;
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
+    margin-bottom: 5px;
 }
 
 .quote-section {
