--- a/style.css
+++ b/style.css
@@ -15,13 +15,25 @@ a:hover {
     border-bottom: 1px solid #f9faf8;
 }
 
+.white-text {
+    color: #f9faf8;
+}
+
+.blue-bg {
+    background: #3882f6;
+    color: #f9faf8;
+}
+
+.column {
+    flex-flow: column;
+}
+
 .flex {
     display: flex;
 }
 
 .header-and-hero {
     background: #1f2937;
-    color: #f9faf8;
     padding: 0px 120px 90px 120px;
 }
 
@@ -51,11 +63,11 @@ a:hover {
 }
 
 .left-part {
-    flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     gap: 20px;
     max-width: 600px;
+    margin-right: auto;
 }
 
 .right-part > img {
@@ -66,15 +78,12 @@ a:hover {
 .hero-button {
     width: 120px;
     height: 30px;
-    background: #3882f6;
     font-weight: 700;
     border: none;
     border-radius: 5px;
-    color: #f9faf8;
 }
 
 .img-section {
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 430px;
@@ -119,7 +128,6 @@ a:hover {
 .quote-cont {
     margin-top: 20px;;
     width: 800px;
-    flex-direction: column;
     gap: 20px;
 }
 
@@ -150,9 +158,7 @@ cite {
     width: 900px;
     height: 150px;
     border-radius: 10px;
-    background-color: #3882f6;
     padding: 20px 80px;
-    color: #f9faf8;
 }
 
 .call-big-text {
@@ -166,8 +172,6 @@ cite {
 
 .call-button {
     border: 2px solid #f9faf8;
-    background: inherit;
-    color: #f9faf8;
     border-radius: 10px;
     padding: 8px 30px;
     font-weight: 700;
@@ -178,8 +182,4 @@ cite {
     background-color: #1f2937;
     justify-content: center;
     align-items: center;
-}
-
-.footer-text {
-    color: #f9faf8;
 }
