--- a/style.css
+++ b/style.css
@@ -188,3 +188,16 @@ cite {
 button {
     cursor: grab;
 }
+
+.bg-img {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.img-section * {
+    color: #f9faf8;
+}
